--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 0.0.1
 	maven_group = hiiragi283
-	archives_base_name = material
+	archives_base_name = RagiMaterials-Fabric
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
