--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ repositories {
     maven { url "https://maven.terraformersmc.com/releases/" }
     maven { url "https://raw.githubusercontent.com/SolidBlock-cn/mvn-repo/main" }
     maven { url "https://ueaj.dev/maven" }
-
 }
 
 dependencies {
@@ -35,6 +34,9 @@ dependencies {
 
     modImplementation "pers.solid:brrp-fabric:1.0.1-1.18.2"
     modImplementation "com.terraformersmc:modmenu:3.2.5"
+    modImplementation "dev.architectury:architectury-fabric:4.11.93"
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:6.4.90"
+    modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:8.3.618"
 
 }
 
@@ -79,7 +81,7 @@ java {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
+        rename { "${it}_${project.archivesBaseName}" }
     }
 }
 
