--- a/build.gradle
+++ b/build.gradle
@@ -42,15 +42,17 @@ dependencies {
 
 processResources {
 
-    inputs.property "version", project.version
-    inputs.property "minecraft_version", project.minecraft_version
-    inputs.property "loader_version", project.loader_version
+    inputs.property "version", version
+    inputs.property "minecraft_version", minecraft_version
+    inputs.property "loader_version", loader_version
+    inputs.property "fabric_kotlin_version", fabric_kotlin_version
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+        expand "version": version,
+                "minecraft_version": minecraft_version,
+                "loader_version": loader_version,
+                "fabric_kotlin_version": fabric_kotlin_version
     }
 
 }
