--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,10 @@ repositories {
         url "https://cursemaven.com"
         content { includeGroup "curse.maven" }
     }
-    maven { url "https://maven.architectury.dev/" }
-    maven { url "https://maven.shedaniel.me/" }
-    maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url "https://jitpack.io" }
+    maven { url "https://maven.architectury.dev" }
+    maven { url "https://maven.shedaniel.me" }
+    maven { url "https://maven.terraformersmc.com/releases" }
     maven { url "https://raw.githubusercontent.com/SolidBlock-cn/mvn-repo/main" }
     maven { url "https://ueaj.dev/maven" }
 }
@@ -31,6 +32,8 @@ dependencies {
     modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
     modImplementation("net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+
+    modImplementation(include("com.github.DM-Earth:Tags-Binder:0.1.2"))
 
     modImplementation("pers.solid:brrp-fabric:1.0.1-1.18.2") { transitive = false }
     modImplementation("com.terraformersmc:modmenu:3.2.5")
