--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,21 @@ repositories {
         url "https://cursemaven.com"
         content { includeGroup "curse.maven" }
     }
+    maven {
+        url "https://api.modrinth.com/maven"
+        content { includeGroup "maven.modrinth" }
+    }
     maven { url "https://jitpack.io" }
     maven { url "https://maven.architectury.dev" }
+    maven { url "https://maven.jamieswhiteshirt.com/libs-release" }
+    maven { url "https://maven.ladysnake.org/releases" }
     maven { url "https://maven.shedaniel.me" }
     maven { url "https://maven.terraformersmc.com/releases" }
+    maven { url "https://maven.tterrag.com/" }
+    maven { url "https://mvn.devos.one/snapshots/" }
     maven { url "https://raw.githubusercontent.com/SolidBlock-cn/mvn-repo/main" }
     maven { url "https://ueaj.dev/maven" }
+
 }
 
 dependencies {
@@ -35,11 +44,51 @@ dependencies {
 
     modImplementation(include("com.github.DM-Earth:Tags-Binder:0.1.2"))
 
-    modImplementation("pers.solid:brrp-fabric:1.0.1-1.18.2") { transitive = false }
-    modImplementation("com.terraformersmc:modmenu:3.2.5")
-    modImplementation("dev.architectury:architectury-fabric:4.11.93")
-    modImplementation("me.shedaniel.cloth:cloth-config-fabric:6.4.90")
-    modImplementation("me.shedaniel:RoughlyEnoughItems-fabric:8.3.618")
+    modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:0.5.0.i-944+1.18.2") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modRuntimeOnly("com.github.Technici4n:magna:1.7.0-1.18") {
+        exclude(group: "io.github.prospector")
+        exclude(group: "me.shedaniel.cloth")
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modRuntimeOnly("com.terraformersmc:modmenu:3.2.5") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modRuntimeOnly("dev.architectury:architectury-fabric:4.11.93") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modRuntimeOnly("io.github.ladysnake:PlayerAbilityLib:1.5.0") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modImplementation("maven.modrinth:modern-industrialization:1.2.3") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:6.4.90") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modImplementation("me.shedaniel:RoughlyEnoughItems-fabric:8.3.618") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modImplementation("pers.solid:brrp-fabric:1.0.1-1.18.2") {
+        transitive = false
+    }
+
+    modRuntimeOnly("RebornCore:RebornCore-1.18:+") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modImplementation("TechReborn:TechReborn-1.18:+") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 
 }
 
