--- a/build.gradle
+++ b/build.gradle
@@ -104,13 +104,15 @@ processResources {
     inputs.property "minecraft_version", minecraft_version
     inputs.property "loader_version", loader_version
     inputs.property "fabric_kotlin_version", fabric_kotlin_version
+    inputs.property "brrp_version", brrp_version
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
         expand "version": version,
                 "minecraft_version": minecraft_version,
                 "loader_version": loader_version,
-                "fabric_kotlin_version": fabric_kotlin_version
+                "fabric_kotlin_version": fabric_kotlin_version,
+                "brrp_version": brrp_version
     }
 
 }
