--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
+
 plugins {
     id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
@@ -21,6 +23,7 @@ repositories {
     }
     maven { url "https://jitpack.io" }
     maven { url "https://maven.architectury.dev" }
+    maven { url "https://maven.blamejared.com" }
     maven { url "https://maven.jamieswhiteshirt.com/libs-release" }
     maven { url "https://maven.ladysnake.org/releases" }
     maven { url "https://maven.shedaniel.me" }
@@ -45,6 +48,9 @@ dependencies {
     modImplementation("pers.solid:brrp-fabric:1.0.1-1.18.2") {
         transitive = false
     }
+
+    //CraftTweaker
+    modImplementation('com.blamejared.crafttweaker:CraftTweaker-fabric-1.18.2:9.1.211')
 
     //Roughly Enough Items
     modRuntimeOnly("com.terraformersmc:modmenu:3.2.5") {
@@ -178,4 +184,10 @@ publishing {
 
 kotlin {
     jvmToolchain(17)
+}
+
+tasks.named('compileKotlin', KotlinCompilationTask.class) {
+    compilerOptions {
+        freeCompilerArgs.add("-Xjvm-default=all")
+    }
 }
