--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.18.2+build.4
 loader_version=0.14.22
 
 # Mod Properties
-mod_version = 0.0.2
+mod_version = 0.0.4-1.18.2
 maven_group = io.github.hiiragi283.material
 archives_base_name = HT Materials
 
