--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,18 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.4
-loader_version=0.14.22
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.10
+loader_version=0.15.0
 
 # Mod Properties
-mod_version = 0.1.0
-maven_group = io.github.hiiragi283.material
-archives_base_name = HTMaterials
+mod_version=0.0.1
+maven_group=io.github.hiiragi283.material
+archives_base_name=HTMaterials
 
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.76.0+1.18.2
+fabric_version=0.42.0+1.16
 
 # Kotlin
-fabric_kotlin_version=1.10.13+kotlin.1.9.20
-
-# BRRP
-brrp_version=1.0.1
+fabric_kotlin_version=1.10.16+kotlin.1.9.21
