--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,37 @@ dependencies {
     modImplementation("curse.maven:better-runtime-resource-pack-618156:4494718") { transitive = false }
 
     //REI
+    modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:6.5.433") {
+        exclude(module: "fabric-api")
+        exclude(module: "fabric-loader")
+    }
+    modCompileOnly("me.shedaniel.cloth:cloth-config-fabric:4.17.101") {
+        exclude(module: "fabric-api")
+        exclude(module: "fabric-loader")
+    }
+
+    //TechReborn
+    modCompileOnly("RebornCore:RebornCore-1.16:+") {
+        exclude(module: "fabric-api")
+        exclude(module: "fabric-loader")
+    }
+
+    modCompileOnly("TechReborn:TechReborn-1.16:+") {
+        exclude(module: "energy")
+        exclude(module: "fabric-api")
+        exclude(module: "fabric-loader")
+        exclude(module: "RebornCore-1.16")
+    }
+
+}
+
+loom {
+
+    runs {
+        client {
+            vmArg("-Dmixin.debug.export=true")
+        }
+    }
 
 }
 
