--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ loom {
         client {
             vmArg("-Dmixin.debug.export=true")
         }
+        server {
+            runDir = "server"
+        }
     }
 
 }
