--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.16.5+build.10
 loader_version=0.15.3
 
 # Mod Properties
-mod_version=0.0.1
+mod_version=1.2.0+1.16.5
 maven_group=io.github.hiiragi283.material
 archives_base_name=HTMaterials
 
