--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,1 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.10
-loader_version=0.15.3
-
-# Mod Properties
-mod_version=1.2.0+1.16.5
-maven_group=io.github.hiiragi283.material
-archives_base_name=HTMaterials
-
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.42.0+1.16
-
-# Kotlin
-fabric_kotlin_version=1.10.16+kotlin.1.9.21
+kotlin.code.style=official
