Added Forge module

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,20 @@
 kotlin.code.style=official
-# Fabric Properties
-minecraftVersion=1.16.5
-fabricLoader=0.15.3
+
 # Mod Properties
 modVersion=2.0.0
 mavenGroup=io.github.hiiragi283.material
 archivesBaseName=HTMaterials
+
+# Fabric Properties
+minecraftVersion=1.16.5
+fabricLoader=0.15.3
 # Fabric Dependencies
 fabricApi=0.42.0+1.16
 fabricKotlin=1.10.16+kotlin.1.9.21
 modMenu=1.16.23
 rei=5.12.385
 indRev=3364481
+
+# Forge Properties
+forgeLoader=1.16.5-36.2.41
 # Forge Dependencies
