Refined Forge Module

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 
 # Mod Properties
-modVersion=2.0.0
+modVersion=2.0.0+1.16.5
 mavenGroup=io.github.hiiragi283.material
 archivesBaseName=HTMaterials
 
